k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/upslopeio/alessandro-lumino-node-sample-app
  labels:
    app: alessandro-lumino-node-sample-app
    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
    app.kubernetes.io/name: alessandro-lumino-node-sample-app
    app.openshift.io/runtime: js
  name: alessandro-lumino-node-sample-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
      app.kubernetes.io/name: alessandro-lumino-node-sample-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
        app.kubernetes.io/name: alessandro-lumino-node-sample-app
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/upslopeio/alessandro-lumino-node-sample-app
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: alessandro-lumino-node-sample-app
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
