k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alessandro-lumino-node-sample-app
    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
    app.kubernetes.io/name: alessandro-lumino-node-sample-app
  name: alessandro-lumino-node-sample-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: alessandro-lumino-node-sample-app-instance
    app.kubernetes.io/name: alessandro-lumino-node-sample-app
  sessionAffinity: None
  type: ClusterIP
